// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checkboxSwicth change on click 1`] = `
<label
  className=" undefined"
>
  <input
    onBlur={[Function]}
    onFocus={[Function]}
    type="checkbox"
  />
  <span />
</label>
`;

exports[`checkboxSwicth change on click 2`] = `
<label
  className="undefined undefined"
>
  <input
    onBlur={[Function]}
    onFocus={[Function]}
    type="checkbox"
  />
  <span />
</label>
`;
